[workspace]
members = [
    "webln",
]
resolver = "2"

[workspace.package]
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/rust-webln"
repository = "https://github.com/yukibtc/rust-webln.git"
license = "MIT"
rust-version = "1.64.0" # TODO: check MSRV

[workspace.dependencies]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"