[workspace]
members = [
    "webln",
    "webln-js",
]
resolver = "2"

[workspace.package]
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/shadowylab/webln"
repository = "https://github.com/shadowylab/webln.git"
license = "MIT"
rust-version = "1.64.0" # TODO: check MSRV

[workspace.dependencies]
js-sys = { version = "0.3", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
webln = { path = "./webln", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
