[package]
name = "webln-js"
version = "0.1.0"
edition = "2021"
authors.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys.workspace = true
webln = { path = "../webln" }
wasm-bindgen = { workspace = true, features = ["std"] }
wasm-bindgen-futures.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
