[package]
name = "webln-js"
version = "0.1.2"
edition = "2021"
description = "WebLN for WASM bindings"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
keywords = ["webln", "lightning", "bitcoin", "javascript"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys.workspace = true
webln = { version = "0.2", path = "../webln", default-features = false }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
