[package]
name = "webln"
version = "0.1.0"
edition = "2021"
description = "WebLN - Lightning Web Standard"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["webln", "lightning", "bitcoin"]

[dependencies]
js-sys.workspace = true
secp256k1 = { version = "0.27", default-features = false, features = ["std"] }
wasm-bindgen = { workspace = true, features = ["std"]}
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3", default-features = false, features = ["Window"] }
