[package]
name = "webln"
version = "0.3.0"
edition = "2021"
description = "WebLN - Lightning Web Standard"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["webln", "lightning", "bitcoin"]

[features]
default = ["std"]
std = ["secp256k1/std", "wasm-bindgen/std"]

[dependencies]
js-sys.workspace = true
secp256k1 = { version = "0.29", default-features = false }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3", default-features = false, features = ["Window"] }
